<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_grey_200"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:src="@drawable/ic_navigate_next_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_artwork"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/background_splashscreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_70"
        android:layout_marginLeft="@dimen/dp_70"
        android:layout_marginTop="@dimen/dp_28"
        android:src="@drawable/ic_file_download_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_artist" />

    <ImageView
        android:id="@+id/image_love"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_28"
        android:src="@drawable/ic_favorite_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/image_share"
        app:layout_constraintStart_toEndOf="@+id/image_download"
        app:layout_constraintTop_toBottomOf="@+id/text_artist" />

    <ImageView
        android:id="@+id/image_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_28"
        android:layout_marginEnd="@dimen/dp_70"
        android:layout_marginRight="@dimen/dp_70"
        android:src="@drawable/ic_share_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_artist" />

    <TextView
        android:id="@+id/text_artist"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_4"
        android:hint="@string/title_my_music"
        android:textColor="@color/color_accent"
        app:layout_constraintEnd_toStartOf="@+id/image_back"
        app:layout_constraintStart_toEndOf="@+id/image_artwork"
        app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

    <TextView
        android:id="@+id/text_song_name"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/title_song_name"
        android:textColor="@color/color_black"
        app:layout_constraintStart_toEndOf="@+id/image_artwork"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp_155" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_240"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_24"
                android:src="@drawable/ic_add_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_add_listnext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_28"
                android:src="@drawable/ic_playlist_play_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_add_playlist" />

            <ImageView
                android:id="@+id/image_add_playlist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_28"
                android:src="@drawable/ic_playlist_add_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_add" />

            <TextView
                android:id="@+id/text_add_mymusic"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/string_add_mymusic"
                android:textColor="@color/color_black"
                app:layout_constraintStart_toEndOf="@+id/image_add"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_add_playlist"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/string_add_playlist"
                android:textColor="@color/color_black"
                app:layout_constraintStart_toEndOf="@+id/image_add_playlist"
                app:layout_constraintTop_toBottomOf="@+id/text_add_mymusic" />

            <TextView
                android:id="@+id/text_play_next"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/string_play_next"
                android:textColor="@color/color_black"
                app:layout_constraintStart_toEndOf="@+id/image_add_listnext"
                app:layout_constraintTop_toBottomOf="@+id/text_add_playlist" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
